overlays/dev/traefik/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-todos-prefix
spec:
  stripPrefix:
    prefixes:
      - /api/todos
