overlays/dev/traefik/ingressroute.yaml
# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: general-ingress
# spec:
#   entryPoints:
#     - web
#   routes:
#     - kind: Rule
#       match: PathPrefix(`/api/todos`)
#       middlewares:
#         - name: strip-todos-prefix
#       services:
#         - kind: Service
#           name: todos-api-service
#           port: 8080
#           scheme: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: todos-host-ingress
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`todos.mtsap.io`)
      # middlewares:
      #   - name: strip-todos-prefix
      services:
        - kind: Service
          name: todos-api-service
          port: 8080
          scheme: http
